syntax = "proto3";

import "google/protobuf/duration.proto";
import "items.proto";

// _____/\\\\\\\\\\\____/\\\\\\\\\\\\_____/\\\\\\\\\\\\\___        
//  ___/\\\/////////\\\_\/\\\////////\\\__\/\\\/////////\\\_       
//   __\//\\\______\///__\/\\\______\//\\\_\/\\\_______\/\\\_      
//    ___\////\\\_________\/\\\_______\/\\\_\/\\\\\\\\\\\\\/__     
//     ______\////\\\______\/\\\_______\/\\\_\/\\\/////////____    
//      _________\////\\\___\/\\\_______\/\\\_\/\\\_____________   
//       __/\\\______\//\\\__\/\\\_______/\\\__\/\\\_____________  
//        _\///\\\\\\\\\\\/___\/\\\\\\\\\\\\/___\/\\\_____________ 
//         ___\///////////_____\////////////_____\///______________
option go_package = "github.com/overmindtech/sdp/go/sdp";

// Response is returned as the result of an ItemRequest, it can contain newly
// found items, errors, or progress updates
message Response {
  // UUID if the item request that this response is in relation to (in binary
  // format)
  bytes itemRequestUUID = 1;

  oneof type {
    // An update on the progress of this particular responder. Used to determin
    // how many responders are still working on a request and allows a requester
    // to know when all is complete
    ProgressUpdate progressUpdate = 2;

    // An item returned as a result of the request
    Item item = 3;

    // An error encountered as part of th request
    ItemRequestError error = 4;
  }
}

// ResponderState represents the state of the responder, note that both
// COMPLETE and ERROR are completion states i.e. do not expect any more items
// to be returned from the request
enum ResponderState {
  // The responder is still gathering data
  WORKING = 0; 
  
  // The request is complete
  COMPLETE = 1;

  // All sources have returned errors
  ERROR = 2;

  // Work has been cancelled while in progress
  CANCELLED = 3;

  // The responder has not set a response in the expected interval
  STALLED = 4;
}

// ProgressUpdate is returned when a query is made
message ProgressUpdate {
  // The name of the responder that is working on a response. This is purely
  // informational
  string responder = 1;

  // The state of the responder
  ResponderState state = 2;

  // The timespan within which to expect the next update. (e.g. 10s) If no
  // further interim responses are received within this time the connection
  // can be considered stale and the requester may give up
  google.protobuf.Duration nextUpdateIn = 3;
}

// ItemRequestError is sent back when an item request fails
message ItemRequestError {
  // The error type. Any types in here will be gracefully handled unless the
  // type os "OTHER"
  enum ErrorType {
    // This should be used of all other failure modes, such as timeouts,
    // unexpected failures when querying state, permissions errors etc. Errors
    // that return this type should not be cached as the error may be transient.
    OTHER = 0;

    // NOTFOUND means that the item was not found. This is only returned as the
    // result of a GET request since all other requests would return an empty
    // list instead
    NOTFOUND = 1;

    // NOSCOPE means that the item was not found because we don't have
    // access to the requested scope. This should not be interpreted as "The
    // item doesn't exist" (as with a NOTFOUND error) but rather as "We can't
    // tell you whether or not the item exists"
    NOSCOPE = 2;

    // TIMEOUT means that the source times out when trying to query the item.
    // The timeout is provided in the original request
    TIMEOUT = 3;
  }
  ErrorType errorType = 2;

  // The string contents of the error
  string errorString = 3;

  // The scope from which the error was raised
  string scope = 4;

  // The name of the source which raised the error (if relevant)
  string sourceName = 5;

  // The type of item that we were looking for at the time of the error
  string itemType = 6;

  // The name of the responder that this error was raised from
  string responderName = 7;
}